--- a/assets/css/login.scss
+++ b/assets/css/login.scss
@@ -69,6 +69,9 @@ main {
                 border-radius: 0.3rem;
                 font-size: 1.6rem;
             }
+            button:hover {
+                cursor: pointer;
+            }
         }
         p {
             padding: 2rem 0;
