--- a/style.scss
+++ b/style.scss
@@ -858,6 +858,7 @@ main {
         box-shadow: inset 0px -7px 7px purple;
         span {
             margin-bottom: 0.3rem;
+            padding: 0.4rem;
         }
         span:hover {
             background-color: blueviolet;
