--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,12 @@ header {
                             font-weight: 400;
                             font-size: 2rem;
                             i {
-                                padding: 0 0 0 0.2rem;
+                                padding: 0 0 0 0.4rem;
+                            }
+                        }
+                        a:hover {
+                            i {
+                                transform: rotate(180deg);
                             }
                         }
                     }
