--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -136,7 +136,7 @@ main #product-detail .product-summery .extra-info .left-box span {
   border-radius: 2rem;
   margin-right: 0.8rem;
   background: black;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 main #product-detail .product-summery .extra-info .left-box span i {
@@ -156,7 +156,7 @@ main #product-detail .product-summery .extra-info .right-box span {
   padding: 0.3rem 0.7rem;
   display: inline-block;
   margin-right: 0.8rem;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   background-color: #1e5670;
   border-radius: 2rem;
 }
@@ -234,9 +234,209 @@ main #product-detail .product-summery .product-creator .product-creator-b .produ
 
 main #product-detail .product-summery > p {
   margin: 2rem 0;
-  font-size: 1.3rem;
-  font-weight: 300;
+  font-size: 1.5rem;
+  font-weight: 400;
   color: #b1b1b1;
+}
+
+main #product-detail .product-summery .product-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 100%;
+}
+
+main #product-detail .product-summery .product-price .product-current-bid {
+  background-color: #343444;
+  padding: 1rem;
+  border-radius: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 48%;
+}
+
+main #product-detail .product-summery .product-price .product-current-bid h4 {
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+
+main #product-detail .product-summery .product-price .product-current-bid span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.4rem;
+}
+
+main #product-detail .product-summery .product-price .product-current-bid span h5 {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+main #product-detail .product-summery .product-price .product-countdown {
+  background-color: #343444;
+  padding: 1rem;
+  border-radius: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 48%;
+}
+
+main #product-detail .product-summery .product-price .product-countdown h4 {
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+
+main #product-detail .product-summery .product-price .product-countdown span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+main #product-detail .product-summery button {
+  margin: 2rem 0;
+  outline: none;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 2rem;
+  width: 100%;
+  padding: 1rem;
+  color: white;
+  font-size: 1.8rem;
+  font-weight: 600;
+  font-family: inherit;
+}
+
+main #product-detail .product-summery button:hover {
+  cursor: pointer;
+  background-color: #9c27b0;
+}
+
+main #product-detail .product-summery .bid-summery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+main #product-detail .product-summery .bid-summery h5 {
+  padding: 1rem 1rem 1rem 0;
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+main #product-detail .product-summery .bid-summery h5 a {
+  text-decoration: none;
+  padding-bottom: 1.2rem;
+  color: #fff;
+}
+
+main #product-detail .product-summery .bid-summery h5 a:hover {
+  color: #fff;
+}
+
+main #product-detail .product-summery .bid-summery .active {
+  font-weight: 400;
+  border-bottom: 1px solid #5142fa;
+  color: #5142fa;
+}
+
+main #product-detail .product-summery ul {
+  margin: 1rem 0;
+  width: 100%;
+}
+
+main #product-detail .product-summery ul li {
+  position: relative;
+  margin-bottom: 0.8rem;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main #product-detail .product-summery ul li img {
+  width: 7rem;
+  border-radius: 1rem;
+  margin-right: 1rem;
+}
+
+main #product-detail .product-summery ul li .bid-info-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main #product-detail .product-summery ul li .bid-info-left .bids-info h4 {
+  font-size: 1.6rem;
+}
+
+main #product-detail .product-summery ul li .bid-info-left .bids-info h4 span {
+  font-size: 1.3rem;
+  font-weight: 200;
+  padding: 0 0.5rem;
+}
+
+main #product-detail .product-summery ul li .bid-info-left .bids-info h6 {
+  font-size: 1.3rem;
+  font-weight: 200;
+  padding: 0 0.5rem;
+}
+
+main #product-detail .product-summery ul li .bid-range {
+  font-size: 1.6rem;
+}
+
+main #product-detail .product-summery ul li .bid-range h4:first-child {
+  font-weight: 400;
+  font-weight: 500;
+}
+
+main #product-detail .product-summery ul li .bid-range h4 {
+  font-weight: 300;
 }
 
 main #product-detail h1::after {
