--- a/style.scss
+++ b/style.scss
@@ -316,6 +316,13 @@ main {
                         padding: 2rem 0;
                         font-size: 1.7rem;
                         font-weight: 500;
+                        a {
+                            color: inherit;
+                            text-decoration: none;
+                        }
+                        a:hover {
+                            text-decoration: underline;
+                        }
                     }
                     .live-creator {
                         width: 100%;
@@ -708,6 +715,13 @@ main {
                         padding: 2rem 0;
                         font-size: 1.7rem;
                         font-weight: 500;
+                        a {
+                            color: inherit;
+                            text-decoration: none;
+                        }
+                        a:hover {
+                            text-decoration: underline;
+                        }
                     }
                     .live-creator {
                         width: 100%;
