--- a/style.scss
+++ b/style.scss
@@ -446,14 +446,58 @@ main {
                     border-radius: 1rem;
                     .popular-gallery {
                         .top-images {
-                            display: flex;
+                            display: grid;
+                            grid-auto-flow: row;
+                            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+                            gap: 0.8rem;
+                            img:nth-child(1) {
+                                // flex-basis: 185px;
+                                // width: 18rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                grid-column: 1 / 4;
+                            }
+                            img:nth-child(2) {
+                                // flex-basis: 185px;
+                                // width: 18rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                grid-column: 4 / 7;
+                            }
+                            img:nth-child(3) {
+                                // flex-basis: 185px;
+                                // width: 18rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                grid-column: 1 / 3;
+                            }
+                            img:nth-child(4) {
+                                // flex-basis: 185px;
+                                // width: 18rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                grid-column: 3 / 5;
+                            }
+                            img:nth-child(5) {
+                                // flex-basis: 185px;
+                                // width: 18rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                // padding: 0.4rem;
+                                // border-radius: 1rem;
+                                grid-column: 5 / 7;
+                            }
                             img {
-                                flex-basis: 185px;
-                                width: 18rem;
-                                padding: 0.4rem;
-                                border-radius: 1rem;
-                                padding: 0.4rem;
-                                border-radius: 1rem;
+                                width: 100%;
+                                border-radius: 0.8rem;
                             }
                         }
                         .bottom-images {
