--- a/assets/css/profile-edit.css
+++ b/assets/css/profile-edit.css
@@ -119,7 +119,7 @@ section#profile .wrapper .profile-view .profile-detail .cover-image .select-cove
 }
 
 section#profile .wrapper .profile-view .profile-detail .profile-account {
-  width: 100%git;
+  width: 100%;
 }
 
 section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider {
