--- a/assets/css/profile-edit.scss
+++ b/assets/css/profile-edit.scss
@@ -76,7 +76,7 @@ section#profile {
                     }
                 }
                 .profile-account {
-                    width: 100%git;
+                    width: 100%;
                     .form-divider {
                         display: grid;
                         grid-template-columns: repeat(2, 1fr);
