--- a/assets/css/profile-edit.css
+++ b/assets/css/profile-edit.css
@@ -14,10 +14,11 @@ section#profile .wrapper .profile-view {
   display: grid;
   -ms-grid-columns: 1fr 3fr;
       grid-template-columns: 1fr 3fr;
+  gap: 2rem;
 }
 
 section#profile .wrapper .profile-view .profile-picture {
-  padding: 1rem;
+  padding: 2.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -26,22 +27,29 @@ section#profile .wrapper .profile-view .profile-picture {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #211c4a;
-  border-radius: 1rem;
+  border-radius: 4rem;
 }
 
 section#profile .wrapper .profile-view .profile-picture > img {
-  border-radius: 1rem;
-  margin-bottom: 0.7rem;
+  border-radius: 3rem;
+  margin-bottom: 1.8rem;
 }
 
 section#profile .wrapper .profile-view .profile-picture > button {
   outline: 0;
   border: 1px solid white;
   background-color: transparent;
-  font-family: inherit;
+  font-family: 'Poppins';
   color: white;
-  border-radius: 1rem;
-  margin-bottom: 0.7rem;
+  border-radius: 3rem;
+  margin-bottom: 1.8rem;
+  padding: 1.4rem;
+  font-size: 2rem;
+}
+
+section#profile .wrapper .profile-view .profile-picture > button:hover {
+  background-color: #3f51b5;
+  cursor: pointer;
 }
 
 section#profile .wrapper .profile-view .profile-detail {
@@ -68,7 +76,7 @@ section#profile .wrapper .profile-view .profile-detail .cover-image {
 
 section#profile .wrapper .profile-view .profile-detail .cover-image h4 {
   font-family: inherit;
-  font-size: 1.6rem;
+  font-size: 2.1rem;
   margin-bottom: 1rem;
 }
 
@@ -83,7 +91,7 @@ section#profile .wrapper .profile-view .profile-detail .cover-image .select-cove
 
 section#profile .wrapper .profile-view .profile-detail .cover-image .select-cover .cover-section {
   height: 16rem;
-  border: 1px solid white;
+  border: 1px solid #3e3e3e;
   border-radius: 1rem;
 }
 
@@ -98,6 +106,11 @@ section#profile .wrapper .profile-view .profile-detail .cover-image .select-cove
   margin-bottom: 0.7rem;
 }
 
+section#profile .wrapper .profile-view .profile-detail .cover-image .select-cover .cover-section:hover {
+  border: 5px solid blue;
+  cursor: pointer;
+}
+
 section#profile .wrapper .profile-view .profile-detail .cover-image .select-cover .cover-section:nth-child(1) {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -110,6 +123,10 @@ section#profile .wrapper .profile-view .profile-detail .cover-image .select-cove
           justify-content: center;
 }
 
+section#profile .wrapper .profile-view .profile-detail .cover-image .select-cover .cover-section:nth-child(1):hover {
+  border: 1px solid white;
+}
+
 section#profile .wrapper .profile-view .profile-detail .cover-image .select-cover .cover-section:nth-child(2) {
   background-image: url("../img/images-item-details.jpg");
 }
@@ -120,6 +137,7 @@ section#profile .wrapper .profile-view .profile-detail .cover-image .select-cove
 
 section#profile .wrapper .profile-view .profile-detail .profile-account {
   width: 100%;
+  padding: 1.6rem 0px;
 }
 
 section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider {
@@ -127,6 +145,91 @@ section#profile .wrapper .profile-view .profile-detail .profile-account .form-di
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+  gap: 2rem;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider h4 {
+  font-size: 2.1rem;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin-bottom: 1.3rem;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group label.input-label {
+  font-size: 2.1rem;
+  color: #9b9b9b;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group > input,
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group textarea {
+  border: 1px solid #626262;
+  width: 100%;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: #00072e;
+  margin: 0.6rem 0;
+  color: aquamarine;
+  font-family: inherit;
+  font-size: 1.7rem;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  outline: none;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group > input[type=text] :focus {
+  border: 1px solid #797979;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  outline: 1px solid #eee;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group button {
+  border-radius: 3rem;
+  border: 1px solid #eee;
+  background-color: transparent;
+  color: white;
+  padding: 1.3rem 2.8rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .form-group button:hover {
+  cursor: pointer;
+  background-color: cornflowerblue;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .right-side .form-group > button {
+  border-radius: 3rem;
+  border: 1px solid #eee;
+  background-color: cornflowerblue;
+  color: white;
+  padding: 0.565rem 2.8rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  margin: 0.6rem 0;
+}
+
+section#profile .wrapper .profile-view .profile-detail .profile-account .form-divider .right-side .form-group > button:hover {
+  border-radius: 3rem;
+  border: 1px solid #eee;
+  background-color: #009688;
+  color: white;
+  padding: 0.565rem 2.8rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  margin: 0.6rem 0;
 }
 /*# sourceMappingURL=profile-edit.css.map */
