--- a/assets/css/profile-edit.scss
+++ b/assets/css/profile-edit.scss
@@ -8,24 +8,31 @@ section#profile {
         .profile-view {
             display: grid;
             grid-template-columns: 1fr 3fr;
+            gap: 2rem;
             .profile-picture {
-                padding: 1rem;
+                padding: 2.5rem;
                 display: flex;
                 flex-direction: column;
                 background-color: #211c4a;
-                border-radius: 1rem;
+                border-radius: 4rem;
                 >img {
-                    border-radius: 1rem;
-                    margin-bottom: 0.7rem;
+                    border-radius: 3rem;
+                    margin-bottom: 1.8rem;
                 }
                 >button {
                     outline: 0;
                     border: 1px solid white;
                     background-color: transparent;
-                    font-family: inherit;
+                    font-family: 'Poppins';
                     color: white;
-                    border-radius: 1rem;
-                    margin-bottom: 0.7rem;
+                    border-radius: 3rem;
+                    margin-bottom: 1.8rem;
+                    padding: 1.4rem;
+                    font-size: 2rem;
+                }
+                >button:hover {
+                    background-color: #3f51b5;
+                    cursor: pointer;
                 }
             }
             .profile-detail {
@@ -39,7 +46,7 @@ section#profile {
                     width: 100%;
                     h4 {
                         font-family: inherit;
-                        font-size: 1.6rem;
+                        font-size: 2.1rem;
                         margin-bottom: 1rem;
                     }
                     .select-cover {
@@ -49,7 +56,7 @@ section#profile {
                         gap: 1rem;
                         .cover-section {
                             height: 16rem;
-                            border: 1px solid white;
+                            border: 1px solid #3e3e3e;
                             border-radius: 1rem;
                             >button {
                                 outline: 0;
@@ -62,10 +69,17 @@ section#profile {
                                 margin-bottom: 0.7rem;
                             }
                         }
+                        .cover-section:hover {
+                            border: 5px solid blue;
+                            cursor: pointer;
+                        }
                         .cover-section:nth-child(1) {
                             display: flex;
                             align-items: center;
                             justify-content: center;
+                        }
+                        .cover-section:nth-child(1):hover {
+                            border: 1px solid white;
                         }
                         .cover-section:nth-child(2) {
                             background-image: url('../img/images-item-details.jpg');
@@ -77,10 +91,82 @@ section#profile {
                 }
                 .profile-account {
                     width: 100%;
+                    padding: 1.6rem 0px;
                     .form-divider {
                         display: grid;
                         grid-template-columns: repeat(2, 1fr);
-                        gap: 1rem
+                        gap: 2rem;
+                        h4 {
+                            font-size: 2.1rem;
+                        }
+                        .form-group {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: flex-start;
+                            align-content: center;
+                            margin-bottom: 1.3rem;
+                            label.input-label {
+                                font-size: 2.1rem;
+                                color: #9b9b9b;
+                            }
+                            >input,
+                            textarea {
+                                border: 1px solid #626262;
+                                width: 100%;
+                                border-radius: 1rem;
+                                padding: 1rem;
+                                background-color: #00072e;
+                                margin: 0.6rem 0;
+                                color: aquamarine;
+                                font-family: inherit;
+                                font-size: 1.7rem;
+                                transition: all 1s;
+                                outline: none;
+                            }
+                            >input[type=text] :focus {
+                                border: 1px solid #797979;
+                                transition: all 1s;
+                                outline: 1px solid #eee;
+                            }
+                            button {
+                                border-radius: 3rem;
+                                border: 1px solid #eee;
+                                background-color: transparent;
+                                color: white;
+                                padding: 1.3rem 2.8rem;
+                                font-size: 1.8rem;
+                                font-family: inherit;
+                            }
+                            button:hover {
+                                cursor: pointer;
+                                background-color: cornflowerblue;
+                            }
+                        }
+                        .left-side {}
+                        .right-side {
+                            .form-group {
+                                >button {
+                                    border-radius: 3rem;
+                                    border: 1px solid #eee;
+                                    background-color: cornflowerblue;
+                                    color: white;
+                                    padding: 0.565rem 2.8rem;
+                                    font-size: 1.8rem;
+                                    font-family: inherit;
+                                    margin: 0.6rem 0;
+                                }
+                                >button:hover {
+                                    border-radius: 3rem;
+                                    border: 1px solid #eee;
+                                    background-color: #009688;
+                                    color: white;
+                                    padding: 0.565rem 2.8rem;
+                                    font-size: 1.8rem;
+                                    font-family: inherit;
+                                    margin: 0.6rem 0;
+                                }
+                            }
+                        }
                     }
                 }
             }
